tests/invalid/runtime/string_replace_all_empty_old.pts
import Io;

function main() : void {
    string s = "abc";
    Io.printLine(s.replaceAll("", "x"));
}
